# llmcourse-hw5-option-2-lab-rag

./: .gitignore  DESIGN.md  PRD.md  README.md  RESEARCH_FINDINGS.md  RUNNING_EXPERIMENTS.md  SELF_ASSESSMENT.md  TASKS.md  pyproject.toml
config/: config.yaml  example.env
data/facts/: synthetic_facts.json
data/noise/: noise_documents.json
notebooks/: comprehensive_analysis.ipynb
results/experiment1/: results.json
results/experiment2/: results.json
results/experiment3/: results.json
results/figures/samples/: README.md
scripts/: generate_data.py  generate_sample_visualizations.py  run_experiment1.py  run_experiment2.py  run_experiment3.py  run_mock_experiments.py
src/analysis/: __init__.py  research_analysis.py  research_visualization.py  statistics.py  visualization.py
src/config/: settings.py
src/data_generation/: fact_generator.py  noise_generator.py
src/experiments/: __init__.py  experiment1_context_window.py  experiment2_noise_impact.py  experiment3_rag_solution.py
src/llm/: ollama_client.py
src/rag/: __init__.py  retriever.py  vector_store.py
src/utils/: __init__.py  helpers.py  logging.py
tests/: __init__.py  test_analysis.py  test_data_generation.py  test_utils.py
